variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: value update is not a member of Boolean
while(estSurBiscuit() = false) 
      ^